[package]
name = "volume"
version = "0.2.1"
edition = "2018"
description = "A simple CLI used to control the master volume on linux and macos."

[[bin]]
name = "volume"
path = "bin/main.rs"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3"
cc = "1.0.70"
